update controller and add swagger